# Labwork_3

labwork3-GU_UK/: CMakeLists.txt
labwork3-GU_UK/include/: bmp.h  common.h  parser.h  read_file.h  sand_model.h
labwork3-GU_UK/src/: bmp.cpp  main.cpp  parser.cpp  read_file.cpp  sand_model.cpp
